	  the computer's default encoding.
	* Write all HTML and XML reports in UTF-8 instead of the
	  computer's default encoding (Naoki Iwami).
	* Fix a bug where the Cobertura ant tasks would not work
	  correctly in Microsoft Windows when Cobertura was
	  installed on a different drive than the drive from which
	  you're running ant (Srivathsan Varadarajan).

version 1.8 (2006-04-10)
	* Ability to have multiple <ignore/> regular expressions
	  in the instrument task (Alexei Yudichev).
	* Ability to specify a minimum branch coverage rate and
	  line coverage rate for each package when using
	  cobertura-check.
	* Show the number of lines and branches covered and the
	  total number of lines and branches in the HTML report.
	* Support for instrumenting classes written in Groovy.
	* Lock the data file before trying to write to it.  This
	  allows multiple JVMs (or multiple class loaders within
	  a single JVM) to write to the same coverage data file
	  with no problems (John Lewis).
	* Ability to instrument classes on a given classpath
	  instead of specifying filesets (John Lewis).
	* Ability to specify which classes will be instrumented
	  using regular expressions (John Lewis).
	* Archives within archives will be instrumented if you
	  specify an includeClassname regular expression (John
	  Lewis).
	* If instrumenting an archive, remove any signatures
	  and checksums, since they will no longer be valid (John
	  Lewis).
	* Removed the Class-Path line from cobertura.jar.  You may
	  need to modify your Cobertura taskdef to include the jars
	  in Cobertura's 'lib' directory.  See our Ant task web
	  page for an example.
	* Reorganized libs into a flatter directory structure--you
	  may need to update your ant scripts.
	* Upgraded from asm 2.1 to asm 2.2.1.  No code changes were
	  needed.
	* Copied portions of classes from JavaNCSS into Cobertura
	  so that we don't need to include the entire JavaNCSS and
	  CCL jars.

version 1.7 (2005-12-06)